--- a/30-11-Bootstrap/Bootstrap-Practica/index.html
+++ b/30-11-Bootstrap/Bootstrap-Practica/index.html
@@ -8,23 +8,25 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous" />
+      crossorigin="anonymous"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="row">
         <div class="col-xs-12">
-          <h1 class="text-center">Noticias </h1>.
+          <h1 class="text-center">Noticias</h1>
+          .
         </div>
       </div>
     </nav>
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary container-fluid">
-
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar</a>
         <button
@@ -34,7 +36,8 @@
           data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent"
           aria-expanded="false"
-          aria-label="Toggle navigation">
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -51,7 +54,8 @@
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
-                aria-expanded="false">
+                aria-expanded="false"
+              >
                 Dropdown
               </a>
               <ul class="dropdown-menu">
@@ -75,40 +79,46 @@
         <div class="col-4 m-5">
           <ul class="list-group">
             <li
-              class="list-group-item d-flex justify-content-between align-items-center">
+              class="list-group-item d-flex justify-content-between align-items-center"
+            >
               El leon
               <span class="badge bg-primary rounded-pill">14</span>
             </li>
             <li
-              class="list-group-item d-flex justify-content-between align-items-center">
+              class="list-group-item d-flex justify-content-between align-items-center"
+            >
               Massa
               <span class="badge bg-primary rounded-pill">2</span>
             </li>
             <li
-              class="list-group-item d-flex justify-content-between align-items-center">
+              class="list-group-item d-flex justify-content-between align-items-center"
+            >
               La ex gefa
               <span class="badge bg-primary rounded-pill">1</span>
             </li>
           </ul>
           <ul class="list-group">
-            <li class="list-group-item disabled" aria-disabled="true">A disabled
-              item</li>
+            <li class="list-group-item disabled" aria-disabled="true">
+              A disabled item
+            </li>
             <li class="list-group-item">Deporte</li>
             <li class="list-group-item">Politica</li>
             <li class="list-group-item">Musica</li>
             <li class="list-group-item">Moda</li>
             <li class="list-group-item">Turismo</li>
             <li class="list-group-item">Novedad</li>
-            <li class="list-group-item disabled" aria-disabled="true">A disabled
-              item</li>
+            <li class="list-group-item disabled" aria-disabled="true">
+              A disabled item
+            </li>
             <li class="list-group-item">Deporte</li>
             <li class="list-group-item">Politica</li>
             <li class="list-group-item">Musica</li>
             <li class="list-group-item">Moda</li>
             <li class="list-group-item">Turismo</li>
             <li class="list-group-item">Novedad</li>
-            <li class="list-group-item disabled" aria-disabled="true">A disabled
-              item</li>
+            <li class="list-group-item disabled" aria-disabled="true">
+              A disabled item
+            </li>
             <li class="list-group-item">Deporte</li>
             <li class="list-group-item">Politica</li>
             <li class="list-group-item">Musica</li>
@@ -118,30 +128,32 @@
           </ul>
         </div>
         <div class="col-6 m-5">
-
           <div class="row">
             <div class="col-6">
-              <h2>El agradecimiento de "Toto" Caputo a Milei tras ser designado
-                al frente del Ministerio de Economía</h2>
+              <h2>
+                El agradecimiento de "Toto" Caputo a Milei tras ser designado al
+                frente del Ministerio de Economía
+              </h2>
             </div>
             <div class="col-4">
               <img
                 src="https://www.shutterstock.com/image-vector/man-woman-candidates-discussing-on-260nw-1747586771.jpg"
-                alt>
+                alt
+              />
             </div>
           </div>
-          <p>El exfuncionario de Mauricio Macri se mostró agradecido por
-            el ofrecimiento del libertario y prometió
-            "dejarlo todo para darle una alegría a todos los argentinos de bien".</p>
-
+          <p>
+            El exfuncionario de Mauricio Macri se mostró agradecido por el
+            ofrecimiento del libertario y prometió "dejarlo todo para darle una
+            alegría a todos los argentinos de bien".
+          </p>
         </div>
-        <p> funcionario de Mauricio Macri se mostró agradecido por el
-          ofrecimiento
-          del libertario y prometió
-          "dejarlo todo para darle una alegría a todos los argentinos de bien".</p>
+        <p>
+          funcionario de Mauricio Macri se mostró agradecido por el ofrecimiento
+          del libertario y prometió "dejarlo todo para darle una alegría a todos
+          los argentinos de bien".
+        </p>
       </div>
-
     </div>
-
   </body>
 </html>
