Se refactoriza codigo de calculadora

--- a/2023-12-05-Javascript-funciones/Calculadora/index.html
+++ b/2023-12-05-Javascript-funciones/Calculadora/index.html
@@ -20,66 +20,81 @@
             <div class="row justify-content-center">
                 <div
                     class="elementoCalculadora col-md-1 bg-primary-subtle justify-content-center">
-                    <button id="btn-1" class="btn btn-warning">1</button>
+                    <button id="btn-1" class="btn btn-warning botonesNumericos botonesPrueba"
+                        value="1">1</button>
                 </div>
                 <div
                     class="elementoCalculadora col-md-1 bg-primary-subtle justify-content-center">
-                    <button id="btn-2" class="btn btn-warning">2</button>
+                    <button id="btn-2" class="btn btn-warning botonesNumericos botonesPrueba"
+                        value="2">2</button>
                 </div>
                 <div
                     class="elementoCalculadora col-md-1 bg-primary-subtle justify-content-center">
-                    <button id="btn-3" class="btn btn-warning">3</button>
+                    <button id="btn-3" class="btn btn-warning botonesNumericos botonesPrueba"
+                        value="3">3</button>
                 </div>
                 <div
                     class="elementoCalculadora col-md-1 bg-primary justify-content-center">
-                    <button id="btn-dividir" class="btn btn-warning">%</button>
+                    <button id="btn-dividir" class="btn btn-warning operaciones botonesPrueba"
+                        value="%">%</button>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div
                     class="elementoCalculadora col-md-1 bg-primary-subtle justify-content-center">
-                    <button id="btn-4" class="btn btn-warning">4</button>
+                    <button id="btn-4" class="btn btn-warning botonesNumericos botonesPrueba"
+                        value="4">4</button>
                 </div>
                 <div
                     class="elementoCalculadora col-md-1 bg-primary-subtle justify-content-center">
-                    <button id="btn-5" class="btn btn-warning">5</button>
+                    <button id="btn-5" class="btn btn-warning botonesNumericos botonesPrueba"
+                        value="5">5</button>
                 </div>
                 <div
                     class="elementoCalculadora col-md-1 bg-primary-subtle justify-content-center">
-                    <button id="btn-6" class="btn btn-warning">6</button>
+                    <button id="btn-6" class="btn btn-warning botonesNumericos botonesPrueba"
+                        value="6">6</button>
                 </div>
                 <div
                     class="elementoCalculadora col-md-1 bg-primary justify-content-center">
                     <button id="btn-multiplicar"
-                        class="btn btn-warning justify-content-center">*</button>
+                        class="btn btn-warning justify-content-center operaciones botonesPrueba"
+                        value="*">*</button>
                 </div>
             </div>
             <div class="row justify-content-center"> <div
                     class="elementoCalculadora col-md-1 bg-primary-subtle justify-content-center">
                     <button id="btn-7"
-                        class="btn btn-warning justify-content-center">7</button>
+                        class="btn btn-warning justify-content-center botonesNumericos botonesPrueba"
+                        value="7">7</button>
                 </div>
                 <div
                     class="elementoCalculadora col-md-1 bg-primary-subtle justify-content-center">
-                    <button id="btn-8" class="btn btn-warning">8</button>
+                    <button id="btn-8" class="btn btn-warning botonesNumericos botonesPrueba"
+                        value="8">8</button>
                 </div>
                 <div
                     class="elementoCalculadora col-md-1 bg-primary-subtle justify-content-center">
-                    <button id="btn-9" class="btn btn-warning">9</button>
+                    <button id="btn-9" class="btn btn-warning botonesNumericos botonesPrueba"
+                        value="9">9</button>
                 </div>
                 <div
                     class="elementoCalculadora col-md-1 bg-primary justify-content-center">
-                    <button id="btn-sumar" class="btn btn-warning">+</button>
+                    <button id="btn-sumar" class="btn btn-warning operaciones botonesPrueba"
+                        value="+">+</button>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-2 bg-primary-subtle justify-content-center"><button
-                        id="btn-0" class="btn btn-warning">0</button></div>
+                        id="btn-0" class="btn btn-warning botonesNumericos botonesPrueba"
+                        value="0">0</button></div>
                 <div class="col-md-2 bg-primary">
-                    <button id="btn-restar" class="btn btn-warning">-</button></div>
+                    <button id="btn-restar" class="btn btn-warning operaciones botonesPrueba"
+                        value="-">-</button></div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-md-2 bg-primary-subtle justify-content-center"><p id="total">Total</p></div>
+                <div class="col-md-2 bg-primary-subtle justify-content-center"><p
+                        id="total">Total</p></div>
                 <div class="col-md-2 bg-primary"><button
                         id="btn-igual" class="btn btn-warning">=</button></div>
             </div>
